{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 215,
  "lineage": "84240a73-7123-2926-8dad-2a9cb0532437",
  "resources": [
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:949263681218:loadbalancer/app/devops-dev-alb/0b4a6014d8cd2c16",
            "arn_suffix": "app/devops-dev-alb/0b4a6014d8cd2c16",
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-dev-alb-1190914767.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:949263681218:loadbalancer/app/devops-dev-alb/0b4a6014d8cd2c16",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d84b0d4be8188b76"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c8f687fb2e4d0cc"
              },
              {
                "subnet_id": "subnet-0da372fff24fb31ec"
              }
            ],
            "subnets": [
              "subnet-07c8f687fb2e4d0cc",
              "subnet-0da372fff24fb31ec"
            ],
            "tags": {
              "Creator": "aashish",
              "Name": "aasis",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aasis",
              "Project": "devops"
            },
            "vpc_id": "vpc-01e8e9c999fba8063",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.fargate.aws_security_group.lb",
            "module.subnets.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hello_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:949263681218:listener/app/devops-dev-alb/0b4a6014d8cd2c16/0a187548d3290d96",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:949263681218:targetgroup/devops-tgt-group/5183b20b7fd3ee08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:949263681218:listener/app/devops-dev-alb/0b4a6014d8cd2c16/0a187548d3290d96",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:949263681218:loadbalancer/app/devops-dev-alb/0b4a6014d8cd2c16",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_lb.application_load_balancer",
            "module.fargate.aws_lb_target_group.hello_world",
            "module.fargate.aws_security_group.lb",
            "module.subnets.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hello_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:949263681218:targetgroup/devops-tgt-group/5183b20b7fd3ee08",
            "arn_suffix": "targetgroup/devops-tgt-group/5183b20b7fd3ee08",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/v1/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:949263681218:targetgroup/devops-tgt-group/5183b20b7fd3ee08",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-tgt-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:security-group/sg-0d84b0d4be8188b76",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d84b0d4be8188b76",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-alb-sg",
            "name_prefix": "",
            "owner_id": "949263681218",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:security-group/sg-0c1a53d5ff7fb6aec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1a53d5ff7fb6aec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d84b0d4be8188b76"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230518084207868600000002",
            "name_prefix": "terraform-",
            "owner_id": "949263681218",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_security_group.lb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:security-group/sg-0f55db2d6a8f9fc91",
            "description": "Security group for PostgreSQL",
            "egress": [],
            "id": "sg-0f55db2d6a8f9fc91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres-security-group20230509114237173000000001",
            "name_prefix": "postgres-security-group",
            "owner_id": "949263681218",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04a0c0c8f4b07fefa",
            "id": "r-rtb-0b95dff3fd839f4941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b95dff3fd839f494",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:route-table/rtb-06050d01206ceadde",
            "id": "rtb-06050d01206ceadde",
            "owner_id": "949263681218",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Creator": "aashish",
              "Name": "aashish-private",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aashish-private",
              "Project": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:route-table/rtb-0b95dff3fd839f494",
            "id": "rtb-0b95dff3fd839f494",
            "owner_id": "949263681218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a0c0c8f4b07fefa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "aashish",
              "Name": "aashish-public",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aashish-public",
              "Project": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001b0bd8f181a349e",
            "route_table_id": "rtb-06050d01206ceadde",
            "subnet_id": "subnet-027269ce6446f80ce"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0536cf6a11062fc24",
            "route_table_id": "rtb-06050d01206ceadde",
            "subnet_id": "subnet-0846a0899b7a286ee"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0534055b9147377bd",
            "route_table_id": "rtb-06050d01206ceadde",
            "subnet_id": "subnet-0c84521ba97a44203"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02af873fa26c2425a",
            "route_table_id": "rtb-06050d01206ceadde",
            "subnet_id": "subnet-03086345c40ceb00a"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f847f248d44bc2c6",
            "route_table_id": "rtb-0b95dff3fd839f494",
            "subnet_id": "subnet-0da372fff24fb31ec"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8ee994d55d2ba08",
            "route_table_id": "rtb-0b95dff3fd839f494",
            "subnet_id": "subnet-07c8f687fb2e4d0cc"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:subnet/subnet-027269ce6446f80ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027269ce6446f80ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949263681218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "aashish",
              "Name": "aashish-private-subnet1",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aashish-private-subnet1",
              "Project": "devops"
            },
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:subnet/subnet-0846a0899b7a286ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0846a0899b7a286ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949263681218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "aashish",
              "Name": "aashish-private-subnet2",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aashish-private-subnet2",
              "Project": "devops"
            },
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:subnet/subnet-0c84521ba97a44203",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c84521ba97a44203",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949263681218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "aashish",
              "Name": "aashish-private-subnet3",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aashish-private-subnet3",
              "Project": "devops"
            },
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:subnet/subnet-03086345c40ceb00a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03086345c40ceb00a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949263681218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "aashish",
              "Name": "aashish-private-subnet4",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aashish-private-subnet4",
              "Project": "devops"
            },
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:subnet/subnet-0da372fff24fb31ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da372fff24fb31ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949263681218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "aashish",
              "Name": "aashish-public-subnet1",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aashish-public-subnet1",
              "Project": "devops"
            },
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:subnet/subnet-07c8f687fb2e4d0cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c8f687fb2e4d0cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949263681218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "aashish",
              "Name": "aashish-public-subnet2",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aashish-public-subnet2",
              "Project": "devops"
            },
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:internet-gateway/igw-04a0c0c8f4b07fefa",
            "id": "igw-04a0c0c8f4b07fefa",
            "owner_id": "949263681218",
            "tags": {
              "Creator": "aashish",
              "Name": "aashish-vpc",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aashish-vpc",
              "Project": "devops"
            },
            "vpc_id": "vpc-01e8e9c999fba8063"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:949263681218:vpc/vpc-01e8e9c999fba8063",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f76a38212d182769",
            "default_route_table_id": "rtb-0806e1b0f64886411",
            "default_security_group_id": "sg-094494c4d2445c72d",
            "dhcp_options_id": "dopt-0de9044b5cd046dfa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e8e9c999fba8063",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0806e1b0f64886411",
            "owner_id": "949263681218",
            "tags": {
              "Creator": "aashish",
              "Name": "aashish-vpc",
              "Project": "devops"
            },
            "tags_all": {
              "Creator": "aashish",
              "Name": "aashish-vpc",
              "Project": "devops"
            }
          }
        }
      ]
    }
  ]
}